<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_placeholder_txt"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/time_placeholder_txt"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_txt" />

            <!-- Team VS Team -->

            <LinearLayout
                android:id="@+id/linearTeams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:weightSum="10"
                app:layout_constraintTop_toBottomOf="@id/time_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4.25"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/team1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/team1_txt"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/vs_txt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/vs_background"
                        android:paddingLeft="15dp"
                        android:paddingTop="3dp"
                        android:paddingRight="15dp"
                        android:paddingBottom="3dp"
                        android:text="@string/vs_txt"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="4.25"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/team2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/team2_txt"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:gravity="center"/>

                </LinearLayout>

            </LinearLayout>

            <!-- Team VS Team -->

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/main_color_red"
                android:gravity="center"
                android:text="@string/location_txt"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearTeams" />

            <LinearLayout
                android:id="@+id/linearLocationImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="40dp"
                android:weightSum="6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">
                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:contentDescription="@string/address_logo_description"
                    android:src="@mipmap/ic_address_logo"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/location_txt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/location_placeholder_txt"
                        android:textSize="18sp"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txtAvailability"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/main_color_red"
                android:gravity="center"
                android:text="@string/availability_txt"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLocationImage" />

            <LinearLayout
                android:id="@+id/radiogroupLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAvailability">

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:background="@drawable/background_radio_group"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:buttonTint="#ffffff"
                        android:text="@string/txt_yes"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:buttonTint="#ffffff"
                        android:text="@string/txt_probably"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:buttonTint="#ffffff"
                        android:text="@string/txt_backup"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:buttonTint="#ffffff"
                        android:text="@string/txt_probably_not"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:buttonTint="#ffffff"
                        android:text="@string/txt_sick"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        tools:targetApi="lollipop" />

                    <RadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:buttonTint="#ffffff"
                        android:text="@string/txt_unavailable"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        tools:targetApi="lollipop" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_edittext_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radiogroupLayout">

                <EditText
                    android:id="@+id/editTextComment"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="0.8"
                    android:autofillHints="@string/details_comment_section"
                    android:background="@drawable/costum_input_field"
                    android:gravity="top"
                    android:hint="@string/details_comment_section"
                    android:inputType="textMultiLine"
                    android:maxLines="50"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_button_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:weightSum="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_edittext_comment">

                <Button
                    android:id="@+id/send_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/costum_send_button"
                    android:backgroundTint="@null"
                    android:text="@string/txt_send_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/main_color_red"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>