<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameDetailActivity">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/appbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/login_logo_descriptor"
            app:layout_constraintBottom_toBottomOf="@+id/LinearImageView"
            app:layout_constraintEnd_toStartOf="@+id/txt_countdownLbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_round_mobile_logo_round" />
    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/gameDetailFragmentHolder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toTopOf="@+id/gameDetailFragmentHolder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <Button
            android:id="@+id/buttonDetails"
            tools:ignore="ButtonStyle"
            android:layout_weight="0.9"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/btn_details"
            android:textAllCaps="false"
            android:textColor="@color/main_color_red"
            android:textSize="17sp"
            style="@null"
            android:background="@drawable/btn_selected_left"
            android:layout_marginRight="2.5dp"
            android:layout_marginEnd="2.5dp" />

        <Button
            android:id="@+id/buttonOverview"
            tools:ignore="ButtonStyle"
            android:layout_weight="0.9"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/btn_overview"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="17sp"
            style="@null"
            android:background="@drawable/btn_notselected_right"
            android:layout_marginLeft="2.5dp"
            android:layout_marginStart="2.5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>